--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,8 @@
 name: ci
 on:
   push:
-    branches:
-      - master
+  schedule:
+    - cron: '0 03 * * *'
 jobs:
   build-and-deploy-image:
     runs-on: ubuntu-latest
